add color palette.

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* color palette
+{
+  "Bistre Brown":"8B7513", 
+  "Gunmetal":"2E363D",
+  "Cadet Blue":"739CA1",
+  "Laser Lemon":"FBFB6A",
+  "Burnt Umber":"883A2D"
+}
+*/
