--- a/src/components/Cards/card-style.css
+++ b/src/components/Cards/card-style.css
@@ -1,27 +1,27 @@
-/* body {
+body {
   background: radial-gradient(#e5e5e5, #ffff, #e5e4e5)
-} */
+}
 
-/* .card {
+.card {
   width: 20rem;
-} */
+}
 
 .card:hover {
   box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.253) !important;
 }
 
-/* .card-body {
+.card-body {
   padding: 3rem 0 !important;
-} */
+} 
 
-/* .card-text {
+.card-text {
   font-size: 0.9rem;
   padding: 0.4rem 1.9rem;
-} */
+}
 
-/* .container-fluid {
+.container-fluid {
   padding-top: 6rem;
-} */
+}
 
 .overflow {
   overflow: hidden;
